PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock
  36       | SwitchStmt
  37       | RepeatStmt ';'
  38       | ContinueStmt ';'

  39  SimpleStmt : LValue '=' Expr
  40             | Call
  41             |

  42  Receiver : Expr '.'
  43           |

  44  LValue : Receiver IDENTIFIER
  45         | Expr '[' Expr ']'

  46  Call : Receiver IDENTIFIER '(' Actuals ')'

  47  Expr : LValue
  48       | Call
  49       | Constant
  50       | Expr '+' Expr
  51       | Expr '-' Expr
  52       | Expr '*' Expr
  53       | Expr '/' Expr
  54       | Expr '%' Expr
  55       | Expr EQUAL Expr
  56       | Expr NOT_EQUAL Expr
  57       | Expr '<' Expr
  58       | Expr '>' Expr
  59       | Expr LESS_EQUAL Expr
  60       | Expr GREATER_EQUAL Expr
  61       | Expr AND Expr
  62       | Expr OR Expr
  63       | '(' Expr ')'
  64       | '-' Expr
  65       | '!' Expr
  66       | READ_INTEGER '(' ')'
  67       | READ_LINE '(' ')'
  68       | THIS
  69       | NEW IDENTIFIER '(' ')'
  70       | NEW Type '[' Expr ']'
  71       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  72       | '(' CLASS IDENTIFIER ')' Expr
  73       | Expr '?' Expr ':' Expr
  74       | Expr BF Expr

  75  Constant : LITERAL
  76           | NULL

  77  Actuals : ExprList
  78          |

  79  ExprList : ExprList ',' Expr
  80           | Expr

  81  WhileStmt : WHILE '(' Expr ')' Stmt

  82  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  83  BreakStmt : BREAK

  84  IfStmt : IF '(' Expr ')' Stmt ElseClause

  85  ElseClause : ELSE Stmt
  86             |

  87  ReturnStmt : RETURN Expr
  88             | RETURN

  89  PrintStmt : PRINT '(' ExprList ')'

  90  SwitchStmt : SWITCH '(' Expr ')' '{' CaseDefault '}'

  91  CaseStmt : CASE Constant ':' StmtList

  92  CaseStmtList : CaseStmtList CaseStmt
  93               |

  94  DefaultStmt : DEFAULT ':' StmtList
  95              |

  96  CaseDefault : CaseStmtList
  97              | CaseStmtList DefaultStmt

  98  ReturnStmt : RETURN Expr
  99             | RETURN

 100  RepeatStmt : REPEAT Stmt UNTIL '(' Expr ')'

 101  ContinueStmt : CONTINUE

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	'{'  shift 41
	'}'  shift 62
	SWITCH  shift 63
	REPEAT  shift 64
	CONTINUE  shift 65
	IDENTIFIER  reduce 43
	';'  reduce 41

	VariableDef  goto 66
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 67
	Stmt  goto 68
	SimpleStmt  goto 69
	IfStmt  goto 70
	WhileStmt  goto 71
	ForStmt  goto 72
	ReturnStmt  goto 73
	PrintStmt  goto 74
	BreakStmt  goto 75
	SwitchStmt  goto 76
	RepeatStmt  goto 77
	ContinueStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (76)

	.  reduce 76


state 47
	Expr : THIS .  (68)

	.  reduce 68


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (81)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (82)

	'('  shift 85
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (84)

	'('  shift 86
	.  error


51: reduce/reduce conflict (reduce 88, reduce 99) on ';'
state 51
	ReturnStmt : RETURN . Expr  (87)
	ReturnStmt : RETURN .  (88)
	ReturnStmt : RETURN . Expr  (98)
	ReturnStmt : RETURN .  (99)
	Receiver : .  (43)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 43
	';'  reduce 88

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 52
	BreakStmt : BREAK .  (83)

	.  reduce 83


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (69)
	Expr : NEW . Type '[' Expr ']'  (70)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 90
	.  error

	Type  goto 91


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (89)

	'('  shift 92
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (66)

	'('  shift 93
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (67)

	'('  shift 94
	.  error


state 57
	Constant : LITERAL .  (75)

	.  reduce 75


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (71)

	'('  shift 95
	.  error


state 59
	Expr : '-' . Expr  (64)
	Receiver : .  (43)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 43

	LValue  goto 87
	Expr  goto 96
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 60
	Expr : '!' . Expr  (65)
	Receiver : .  (43)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 43

	LValue  goto 87
	Expr  goto 97
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 61
	Expr : '(' . Expr ')'  (63)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (72)
	Receiver : .  (43)

	CLASS  shift 98
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 43

	LValue  goto 87
	Expr  goto 99
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 62
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 63
	SwitchStmt : SWITCH . '(' Expr ')' '{' CaseDefault '}'  (90)

	'('  shift 100
	.  error


state 64
	RepeatStmt : REPEAT . Stmt UNTIL '(' Expr ')'  (100)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	'{'  shift 41
	SWITCH  shift 63
	REPEAT  shift 64
	CONTINUE  shift 65
	IDENTIFIER  reduce 43
	';'  reduce 41

	VariableDef  goto 66
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 67
	Stmt  goto 101
	SimpleStmt  goto 69
	IfStmt  goto 70
	WhileStmt  goto 71
	ForStmt  goto 72
	ReturnStmt  goto 73
	PrintStmt  goto 74
	BreakStmt  goto 75
	SwitchStmt  goto 76
	RepeatStmt  goto 77
	ContinueStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 65
	ContinueStmt : CONTINUE .  (101)

	.  reduce 101


state 66
	Stmt : VariableDef .  (27)

	.  reduce 27


state 67
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 68
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 69
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 102
	.  error


state 70
	Stmt : IfStmt .  (29)

	.  reduce 29


state 71
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 72
	Stmt : ForStmt .  (31)

	.  reduce 31


state 73
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 103
	.  error


state 74
	Stmt : PrintStmt . ';'  (33)

	';'  shift 104
	.  error


state 75
	Stmt : BreakStmt . ';'  (34)

	';'  shift 105
	.  error


state 76
	Stmt : SwitchStmt .  (36)

	.  reduce 36


state 77
	Stmt : RepeatStmt . ';'  (37)

	';'  shift 106
	.  error


state 78
	Stmt : ContinueStmt . ';'  (38)

	';'  shift 107
	.  error


state 79
	SimpleStmt : LValue . '=' Expr  (39)
	Expr : LValue .  (47)

	'='  shift 108
	AND  reduce 47
	OR  reduce 47
	LESS_EQUAL  reduce 47
	GREATER_EQUAL  reduce 47
	EQUAL  reduce 47
	NOT_EQUAL  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	'.'  reduce 47
	'['  reduce 47
	'?'  reduce 47
	BF  reduce 47

